--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Email: wzhang237-c[AT]my[DOT]cityu[DOT]edu[DOT]hk</p>
 <h2>About me</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>I am a Ph.D. candidate in the Department of Electrical Engineering at the City University of Hong Kong (CityU), supervised by with Prof. Shu-hung Leung and Prof. Taejoon Kim.
+<p>I received my Ph.D. from Department of Electrical Engineering at the City University of Hong Kong (CityU) in 2019, supervised by with Prof. Shu-hung Leung and Prof. Taejoon Kim.
 Before this, I received the B.S. and M.S. degrees from the Harbin Institute of Technology, Harbin, China, in 2013 and 2015, respectively.</p>
 </div></div>
 <a name="researchinterests"></a><h2>Research interests</h2>
